# cign

./: .envrc  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
assets/: chad.txt
nix/: common-deps.nix  rust.nix  sources.json
src/: cli.rs  command.rs  config.rs  custom.rs  dir.rs  git.rs  main.rs
