[package]
name = "cign"
version = "0.2.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
description = "Watch configured git repos, check if all are clean with one command"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drozdziak1/cign"
keywords = ["git", "cli", "tool"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
toml = "0.5.9"
serde = "1"
serde_derive = "1"
clap = {version = "4", features = ["derive"]}
failure = "0.1"
shellexpand = "3.0"
log = "0.4"
env_logger = "0.9"
libc = "0.2"
dialoguer = "0.10"
